# NERS-544-Project

./: CMakeLists.txt  README.md
cmake/: CMakeCompilerFlags.cmake  CMakeDefaults.cmake  MacroEnsureOutOfSourceBuild.cmake
doc/: CMakeLists.txt  Estimators.xlsx  code.tex  conclusion.tex  introduction.tex  report.tex  results.tex
materials/: Materials.cpp  Materials.h
src/: CMakeLists.txt  NERS-544.cpp  geometry.cpp  geometry.h  main.cpp  materials.cpp  materials.h  particles.cpp  particles.h  utils.cpp  utils.h
